fix: main screen on mobile

--- a/src/scss/components/pages/main/_hero.scss
+++ b/src/scss/components/pages/main/_hero.scss
@@ -30,7 +30,7 @@
 .hero__content {
   position: relative;
   z-index: 1;
-  max-width: 41.25rem;
+  max-width: 48.75rem;
   color: var(--color-black);
 }
 
@@ -65,10 +65,12 @@
   img {
     height: 100%;
     width: 100%;
+    display: none;
   }
   @media (max-width: 480px) {
     img {
       object-position: 35% center;
+       display: block;
     }
   }
 }
@@ -79,4 +81,8 @@
   inset: 0;
   width: 100%;
   height: 110%;
+  background-color: var(--light-color);
+  @media(max-width: 480px) {
+    display: none;
+  }
 }
